--- a/vscode/User/settings.json
+++ b/vscode/User/settings.json
@@ -19,7 +19,17 @@
     "editor.cursorStyle": "block",
     "telemetry.enableCrashReporter": false,
     "telemetry.enableTelemetry": false,
-    "workbench.colorTheme": "Quiet Light",
     "editor.folding": false,
-    "vsicons.dontShowNewVersionMessage": true
+    "vsicons.dontShowNewVersionMessage": true,
+    "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
+    "editor.fontLigatures": true,
+    "editor.fontSize": 13,
+    "window.autoDetectColorScheme": true,
+    "workbench.preferredLightColorTheme": "Quiet Light",
+    "editor.renderIndentGuides": false,
+    "workbench.colorTheme": "Quiet Light",
+    "customizeUI.activityBar":"bottom",
+    "customizeUI.titleBar":"inline",
+    "customizeUI.listRowHeight": 20,
+    "window.titleBarStyle": "native"
 }
