More Python related ignores

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ vscode/User/workspaceStorage
 vscode/User/globalStorage/state.vscdb
 vscode/User/globalStorage/state.vscdb.backup
 .DS_Store
+__pycache__
